# Evol-Instruct

./: .gitignore  pyproject.toml  setup.py  test.json
evol_instruct/: InstructionEvolver.py  instruction_evolver.py  main.py  prompts.json
evol_instruct/config/: config.ini  dataset.ini
evol_instruct/data/: prepare.py  prepare_seed.py  test.json
evol_instruct/dataset/: dataset.py
evol_instruct/helpers/: bash.py  ei_os.py  evolver.py  generate.py  prompts.py
evol_instruct/init/: datasets.py  logger.py  model.py
evol_instruct/scripts/: prepare_evaluator_model.sh  prepare_generator_model.sh
evol_instruct/tests/: prompts.py
